Chore #2: Added more routes for medicines
